--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="title">مئوية<br>
             عطية عبد السلام عاشور
-         أستاذ الرياضيات التطبيقية -
+         - أستاذ الرياضيات التطبيقية 
             
         </h1>
 
@@ -20,8 +20,12 @@
         </h4>
         <div class="buttons">
             
-            <a href="article2.html" class="button">مقالة 2</a>
-            <a href="article3.html" class="button">مقالة 3</a>
+            <a href="article2.html" class="button">
+                إدارته لقسم الرياضيات
+            </a>
+            <a href="article3.html" class="button">
+              العلاقات الدولية
+            </a>
             <a href="publications.html" class="button"> ابحاثه</a>
             <a href="CV.html" class="button">السيرة الذاتية</a>
         </div>
