--- a/CV.html
+++ b/CV.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>السيرة الذاتية - عطية عبد السلام عاشور</title>
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="CV.css">
 </head>
 <body>
 
