more pages added

--- a/CV.html
+++ b/CV.html
@@ -12,7 +12,7 @@
     <div class="fixed-header">
         <div class="header-content">
             <h1>السيرة الذاتية للأستاذ الدكتور / عطية عبد السلام عاشور</h1>
-            <p>تاريخ الميلاد: 13 سبتمبر 1924 	محل الميلاد: دمياط – مصر</p>
+            
             <!-- Navigation for Sections -->
             <nav class="sections-nav">
                 <a href="#scientific-history" class="nav-link">التاريخ العلمي</a>
@@ -99,8 +99,9 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        © 2024 سيرة ذاتية للأستاذ الدكتور عطية عبد السلام عاشور
+    <footer class="fixed-footer">
+          السيرة الذاتية للأستاذ الدكتور عطية عبد السلام عاشور
+          -  تاريخ الميلاد: 13 سبتمبر 1924 	محل الميلاد: دمياط – مصر
     </footer>
 
 </body>
