--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
                 <img src="images/wi.PNG" alt="Image 3">
                 <img src="images/AshourMusharafa.gif" alt="Image 4">
                 <img src="images/Ashour1000LE.gif" alt="Image 5">
-                <img src="images/AshourNigeria1984.gif" alt="Image 6">
+                <img src="images/Nile.gif" alt="Image 6">
+                <img src="images/AshourNigeria1984.gif" alt="Image 7">
+                <img src="images/part.PNG" alt="Image 8">
             </div>
             <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
             <button class="next" onclick="moveSlide(1)">&#10095;</button>
         </div>
+        <br>
     </div>
     <script src="carousel.js"></script>
 </body>
