life.html updated

--- a/life.html
+++ b/life.html
@@ -26,20 +26,41 @@
                 <li>ولد في دمياط في 13 سبتمبر 1924</li>
                 <li>تلقى تعليمه الابتدائي في دمياط</li>
                 <li>انتقلت الأسرة للقاهرة عام 1935 لتتيح له ولأخوته الالتحاق بالتعليم الثانوي</li>
+                <li>
+                    التحق بمدرسة فؤاد الأول الثانوية بالعباسية (حالياً مدرسة العباسية الثانوية)، ثم انتقل إلى مدرسة فاروق الأول التي أنشأها إسماعيل القباني عام 1937 كمدرسة نموذجية (حالياً مدرسة إسماعيل القباني).
+                </li>
                 <li>التحق بمدرسة فؤاد الأول الثانوية بالعباسية، ثم انتقل إلى مدرسة فاروق الأول...</li>
-                <li>دخل كلية العلوم بجامعة فؤاد الأول...</li>
-                <li>سافر في بعثة لانجلترة في ديسمبر 1944...</li>
-                <li>تدرج في الوظائف الجامعية حتى أصبح أستاذ كرسي الرياضيات التطبيقية عام 1965</li>
-                <li>حصل على درجة دكتوراه العلوم (D. Sc.) من جامعة لندن عام 1967...</li>
-                <li>كان عضواً بمجمع اللغة العربية، ونائباً لرئيس المجمع...</li>
-                <li>تولى رئاسة قسم الرياضيات التطبيقية بكلية العلوم...</li>
+                <li>
+                    دخل كلية العلوم بجامعة فؤاد الأول (جامعة القاهرة حالياً) عام 1940، وحصل على بكالوريوس العلوم - الدرجة الخاصة في الرياضيات عام 1940، وعين حينها معيداً بقسم الرياضيات التطبيقية.
+                </li>
+                <li>
+                    سافر في بعثة لانجلترة في ديسمبر 1944، واستقر لمدة 4 سنوات في لندن حيث حصل على الدكتوراه في ديسمبر 1948 من (Imperial College) بلندن تحت إشراف A. Price.
+                </li>
+                <li>
+                    عاد للقاهرة في أوائل عام 1950، ليتم تعيينه مدرساً بقسم الرياضيات التطبيقية.
+                </li>
+                <li>
+                    تدرج في الوظائف الجامعية حتى أصبح أستاذ كرسي الرياضيات التطبيقية عام 1965.
+                </li>
+                <li>
+                    حصل على درجة دكتوراه العلوم (D. Sc.) من جامعة لندن عام 1967، وكان ثاني مصري يحصل عليها بعد علي مصطفى مشرفة.
+
+                </li>
+                <li>كان عضواً بمجمع اللغة العربية، ونائباً لرئيس المجمع.</li>
+                <li>الرئيس الأسبق الجمعية المصرية للعلوم الرياضية والفيزيائية.</li>
+                <li>الرئيس الأسبق اللجنة الوطنية للاتحاد الدولي للرياضيات.</li>
+                <li>الرئيس الأسبق اللجنة الوطنية للاتحاد الدولي للطبيعة الأرضية ومقاييس الأرض.</li>
+                <li>عضو المجمع العلمي المصري (Institut d’Egypte).</li>
+                <li>تولى رئاسة قسم الرياضيات التطبيقية بكلية العلوم – جامعة القاهرة من 1959 – 1960، ثم من 1965 – 1969.</li>
+                <li>رئيس قسم الرياضيات من 1971 – 1975، ثم من 1980 – 1984.</li>
+
                 <li>حصل على كل جوائز الدولة في العلوم:
                     <ul>
                         <li>جائزة فؤاد الأول للعلوم الرياضية والطبيعية والفلكية عام 1952.</li>
                         <li>جائزة محمد أمين لطفي للعلوم الرياضية (مرتان) 1954، 1963</li>
                         <li>جائزة الدولة التشجيعية في العلوم الرياضية 1967</li>
                         <li>جائزة الدولة التقديرية في العلوم الأساسية 1988</li>
-                        <li>جائزة النيل في العلوم 2004</li>
+                        <li>جائزة النيل (مبارك سابقاً) في العلوم 2004</li>
                     </ul>
                 </li>
                 <li>تم تكريمه محلياً ودولياً بعدد من الأوسمة والنياشين:
